# job-2.0

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/: routes.py  ui_routes.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  entities.py
app/schemas/: common.py
app/services/: analytics.py  applicator.py  composer.py  discovery.py  llm_router.py  matcher.py  question_memory.py  utils.py
app/static/: app.js  index.html  styles.css
app/ui/: app.js  index.html  styles.css
app/ui/static/: app.js  styles.css
app/ui/templates/: index.html
app/workers/: autopilot.py
mobile/: App.tsx  app.json  package.json  tsconfig.json
scripts/: seed_demo.py
tests/: test_analytics.py  test_matcher.py  test_question_memory.py
web/: index.html  package.json  tsconfig.json
web/src/: App.tsx  api.ts  styles.css
web/src/components/: MetricCard.tsx
web/src/screens/: DashboardScreen.tsx  JobsScreen.tsx
